# micropython-as

./: BUILD.md  DECISIONS.md  PINOUT.md  README.md
image/: font_extract.py
lib/http/: README.md
lib/micropython/: README.md
lib/micropython/esp32-c3/: CMakeLists.txt  README.md  micropython_embed.mk  mpconfigport.h  riscv32-cross.cmake
lib/micropython/esp32-s3/: CMakeLists.txt  README.md  micropython_embed.mk  mpconfigport.h  xtensa-cross.cmake
mockup/vector-cube/: README.md  compile.sh  test-sdl-animation.cpp
src/: CMakeLists.txt  README.md  partitions.csv  sdkconfig
src/components/falcon_as/: CMakeLists.txt  ClientHandler.cpp  ClientHandler.hpp  README.md
src/components/filesystem/: CMakeLists.txt  Filesystem.cpp  Filesystem.hpp  README.md  convert_static_fs.py  filedata.h  filemetadata.h  filemetadata.py
src/components/filesystem/filesystem/: 404.html  index.html
src/components/micropython/: CMakeLists.txt  Micropython.cpp  Micropython.hpp
src/components/network_oop/: CMakeLists.txt  Client.cpp  Client.hpp  ClientHandler.cpp  ClientHandler.hpp  Network.cpp  Network.hpp  NetworkWifi.cpp  NetworkWifi.hpp  README.md  Server.cpp  Server.hpp
src/components/peripherals/: CMakeLists.txt  Display.cpp  Display.hpp  GameScreen.cpp  GameScreen.hpp  LED.hpp  LED3Color.cpp  LED3Color.hpp  LEDGpio.cpp  LEDGpio.hpp  LEDPwm.cpp  LEDPwm.hpp  TitleScreen.cpp  TitleScreen.hpp  cube-animation.hpp  font8x8.ascii  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c_new.c
src/components/peripherals/metadata/: cube-animation.h
src/components/ssd1306/: CMakeLists.txt  README.md  font8x8.ascii  font8x8_basic.h  ssd1306.c  ssd1306.h  ssd1306_i2c_new.c
src/main/: CMakeLists.txt  Helper.hpp  Kconfig.projbuild  constants.h  micropython_as.c  micropython_as.cpp  pong.h
